[tool.poetry]
name = "simple restfull service (homework)"
version = "0.1.0"
description = ""
authors = ["m-evdokimov <m.v.evdokimov1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
